fix: arrow menu not align with bubble username

--- a/src/rogu/ui/MessageContent/index.scss
+++ b/src/rogu/ui/MessageContent/index.scss
@@ -75,6 +75,8 @@ $avatarSize: 32px;
 
         .rogu-message-content__menu {
           flex-shrink: 0;
+          display: flex;
+          align-items: center;
         }
       }
 
